sdk/v0.5.3/twelvelabs.mdx
---
title: "twelvelabs"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/twelvelabs.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.twelvelabs


Pixeltable UDFs
that wrap various endpoints from the TwelveLabs API. In order to use them, you must
first `pip install twelvelabs` and configure your TwelveLabs credentials, as described in
the [Working with TwelveLabs](https://docs.pixeltable.com/notebooks/integrations/working-with-twelvelabs) tutorial.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; embed()

```python Signature
embed(
    model_name: pxt.String,
    *,
    text: pxt.String | None = None,
    text_truncate: pxt.String | None = None,
    audio: pxt.Audio | None = None
) -> pxt.Array[(1024,), float32]
```

Creates an embedding vector for the given `text`, `audio`, or `image` parameter. Only one of `text`, `audio`, or
`image` may be specified.

Equivalent to the TwelveLabs Embed API.
https://docs.twelvelabs.io/v1.3/docs/guides/create-embeddings

Request throttling:
Applies the rate limit set in the config (section `twelvelabs`, key `rate_limit`). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install twelvelabs`

**Parameters:**

- **`model_name`** (`pxt.String`): The name of the model to use. Check
    [the TwelveLabs documentation](https://docs.twelvelabs.io/v1.3/sdk-reference/python/create-text-image-and-audio-embeddings)
    for available models.
- **`text`** (`pxt.String | None`): The text to embed.
- **`text_truncate`** (`pxt.String | None`): Truncation mode for the text.
- **`audio`** (`pxt.Audio | None`): The audio to embed.

**Returns:**

- `pxt.Array[(1024,), float32]`: The embedding.

**Examples:**

Add a computed column `embed` for an embedding of a string column `input`:
```python
tbl.add_computed_column(
    embed=embed(model_name='Marengo-retrieval-2.7', text=tbl.input)
)
```

